--- a/codelogs/log5.html
+++ b/codelogs/log5.html
@@ -40,7 +40,7 @@
   box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);"></a>
 
 <p>Dimensions determine the physical size of an image (how large it appears on screen), while resolution refers more to the amount of visual information contained in the image. The evolution of video games is a well-known example of resolution.</p>
-
+<img src="legend-of-zelda-a-link-to-the-past.png" alt="16bit"> <img src="The-Legend-of-Zelda-Twilight-Princess-Screenshot-057.jpg" alt="modern">
 <p>The two images have the same physical dimension, but the high resolution image on the right is much more photorealistic because it conveys more information to the eye than the old-school blocky pixels. Not that old-school games aren’t tons of fun!</p>
 
 <p>Different image file formats have various drawbacks and benefits. PNG and JPG are the file types most commonly used for digital photographs and virtual images, such as logos, and are, therefore, probably the most common types seen on a typical webpage. GIFs are also quite popular, especially since the advent of memes and social media, where animated GIF images have become a staple. Other file types, such as WebP and SVG, are less common and typically used only with certain applications or programs.</p>
