--- a/codelogs/log5.html
+++ b/codelogs/log5.html
@@ -29,6 +29,7 @@
 
 </head>
 <body>
+	<h1>Fun with Images</h1>
 <p>Images can be used and displayed in a wide variety of ways using HTML and/or CSS. A standalone image can be inserted on a page as a decorative element or material reference. It can also be made to serve a function, such as by making it into a clickable link or button. CSS can also be used to create an image gallery, displaying a selection of multiple images.</p>
 
 <p>In the above examples, using the "image" function, the images are typically displayed in-line with the text and other elements on the surface of the page. But images can also be used as the background for a page or portion of the page by using the "background-image" function.</p> 
@@ -39,9 +40,9 @@
 	<img src="IMG_1024.JPG" alt="cat" style="border: 1px solid #ddd;border-radius: 4px;padding: 5px;"> <a target="IMG_1024.JPG" href="https://waifanimals.org/"><img src="IMG_1024.JPG" alt="cat" style="border: 1px solid #ddd;border-radius: 4px;padding: 5px;img:hover {
   box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);"></a>
 
-<p>Dimensions determine the physical size of an image (how large it appears on screen), while resolution refers more to the amount of visual information contained in the image. The evolution of video games is a well-known example of resolution.</p>
+<p>Dimensions determine the physical size of an image (how large it appears on screen), while resolution refers more to the amount of visual information contained in the image. This is why low-resolution images become blocky and pixelated when enlarged. The evolution of video games is another well-known example of resolution:</p>
 <img src="legend-of-zelda-a-link-to-the-past.png" alt="16bit"> <img src="The-Legend-of-Zelda-Twilight-Princess-Screenshot-057.jpg" alt="modern">
-<p>The two images have the same physical dimension, but the high resolution image on the right is much more photorealistic because it conveys more information to the eye than the old-school blocky pixels. Not that old-school games aren’t tons of fun!</p>
+<p>The high resolution image on the right is much more photorealistic because it conveys more information to the eye than the old-school blocky pixels. Not that old-school games aren’t tons of fun!</p>
 
 <p>Different image file formats have various drawbacks and benefits. PNG and JPG are the file types most commonly used for digital photographs and virtual images, such as logos, and are, therefore, probably the most common types seen on a typical webpage. GIFs are also quite popular, especially since the advent of memes and social media, where animated GIF images have become a staple. Other file types, such as WebP and SVG, are less common and typically used only with certain applications or programs.</p>
 	<!-- HTML elements here -->
