--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@
 		<li><a href="eeveezsmith.github.io/codelogs/log3.html">Code Log 3</a></li>
 		<li><a href="eeveezsmith.github.io/codelogs/log4.html">Code Log 4</a>
 </li>
+		<li><a href="eeveezsmith.github.io/codelogs/log5.html">Code Log 5</a></li>
 	</ul>
 	<H2>Tiny Projects</H2>
 	<ul>
 		<li><a href="eeveezsmith.github.io/favorite-recipe/index.html">Tiny Project 2</a></li>
 		<li>Tiny Project 3 <a href="eeveezsmith.github.io/anni-albers/index.html">Version 1</a> <a href="https://eeveezsmith.github.io/anni-albers/index2.html">Version 2</a></li>
 		<li><a href="eeveezsmith.github.io/rhododendron/index.html">Tiny Project 4</a>
+</li>
+		<li><a href="eeveezsmith.github.io/responsive-recipe/index.html">Tiny Project 6</a>
 </li>
 	</ul>
 	<H2>Major Project</H2>
