--- a/recipe-minisite/recipe3.html
+++ b/recipe-minisite/recipe3.html
@@ -5,7 +5,7 @@
 	<!-- meta tags and title -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pineapple Upside Down Cake</title>
+	<title>Nestlé Toll House's Original Chocolate Chip Cookies</title>
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
@@ -59,15 +59,14 @@ main {
 <body>
 	
 <header>
-  <h1>Pineapple Upside Down Cake</h1>
+  <h1>Nestlé Toll House's Original Chocolate Chip Cookies</h1>
   
 </header>
 	<main>
 		<div>
 	
 		<img src="PUCSmall.jpg" alt="Pineapple upside down cake">
-	<p>Delicious and easy to make, even for inexperienced bakers, the pineapple upside down cake requires only a handful of ingredients and minimal preparation. It also happens to be my mom's favorite!</p>
-		
+<p>The recipe that started it all! More than 80 years later, Nestlé Toll House's Original Chocolate Chip Cookies are a true classic and a go-to recipe for all occasions.</p>		
 		</div>
 			<section>
 			<h2>Ingredients</h2>
@@ -93,9 +92,11 @@ main {
 	</main>
 	<footer>
 		<p>&copy; 2025 Evelyn Z Smith</p>
-		<p>Photo courtesy of Oscar Ivan Esquivel Arteaga via Unsplash</p>
+		<p>Photo by <a href="https://unsplash.com/@trendagraphy?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">James Trenda</a> on <a href="https://unsplash.com/photos/a-group-of-cookies-7QGrloNqx6w?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+      </p>
 	</footer>
 	<!-- HTML elements here -->
 
 </body>
 </html>
+
