--- a/recipe-minisite/recipe3.html
+++ b/recipe-minisite/recipe3.html
@@ -65,7 +65,7 @@ main {
 	<main>
 		<div>
 	
-		<img src="PUCSmall.jpg" alt="Pineapple upside down cake">
+		<img src="james-trenda-7QGrloNqx6w-unsplash.jpg" alt="Chocolate chip cookies">
 <p>The recipe that started it all! More than 80 years later, Nestlé Toll House's Original Chocolate Chip Cookies are a true classic and a go-to recipe for all occasions.</p>		
 		</div>
 			<section>
@@ -99,4 +99,5 @@ main {
 
 </body>
 </html>
+
 
