--- a/recipe-minisite/recipe3.html
+++ b/recipe-minisite/recipe3.html
@@ -71,12 +71,16 @@ main {
 			<section>
 			<h2>Ingredients</h2>
 			<ul>
-				<li>1/4 cup butter</li>
-				<li>1 cup packed brown sugar</li>
-				<li>1 can (20 oz) pineapple slices in juice, drained; save juice</li>
-				<li>1 jar (6 oz) maraschino cherries without stems, drained</li>
-				<li>1 Box Betty Crocker Super Moist Yellow Cake Mix</li>
-				<li>Vegetable oil and eggs (refer to cake mix instructions)</li>
+				<li>2 1/4 cups all-purpose flour</li>
+<li>1 teaspoon baking soda</li>
+<li>1 teaspoon salt</li>
+<li>1 cup (2 sticks) butter, softened</li>
+<li>3/4 cup granulated sugar</li>
+<li>3/4 cup packed brown sugar</li>
+<li>1 teaspoon vanilla extract</li>
+<li>2 large eggs</li>
+<li>2 cups (12-oz. pkg.) Nestlé Toll House Semi-Sweet Chocolate Morsels</li>
+<li>1 cup chopped nuts (if omitting, add 1-2 tablespoons of all-purpose flour)</li>
 			</ul>
 		</section>
 		
@@ -99,5 +103,6 @@ main {
 
 </body>
 </html>
+
 
 
