--- a/recipe-minisite/recipe3.html
+++ b/recipe-minisite/recipe3.html
@@ -87,9 +87,9 @@ main {
 		<section>
 			<h2>Directions</h2>
 			<ol>
-				<li>Heat oven to 350°F (325°F for dark or nonstick pan). In 13x9-inch pan, melt butter in oven. Sprinkle brown sugar evenly over butter. Arrange pineapple slices on brown sugar. Place cherry in center of each pineapple slice, and arrange remaining cherries around slices; press gently into brown sugar.</li>
-				<li>Add enough water to reserved pineapple juice to measure 1 cup. Make cake batter as directed on box, substituting pineapple juice mixture for the water. Pour batter over pineapple and cherries.</li>
-				<li>Bake 42 to 48 minutes (44 to 53 minutes for dark or nonstick pan) or until toothpick inserted in center comes out clean. Immediately run knife around side of pan to loosen cake. Place heatproof serving plate upside down onto pan; turn plate and pan over. Leave pan over cake 5 minutes so brown sugar topping can drizzle over cake; remove pan. Cool 30 minutes. Serve warm or cool. Store covered in refrigerator.</li>
+				<li>Preheat oven to 375° F.</li>
+				<li>Combine flour, baking soda and salt in small bowl. Beat butter, granulated sugar, brown sugar and vanilla extract in large mixer bowl until creamy. Add eggs, one at a time, beating well after each addition. Gradually beat in flour mixture. Stir in morsels and nuts. Drop by rounded tablespoon onto ungreased baking sheets.</li>
+			<li>Bake for 9 to 11 minutes or until golden brown. Cool on baking sheets for 2 minutes; remove to wire racks to cool completely.</li>
 			</ol>
 		</section>
 		
@@ -103,6 +103,7 @@ main {
 
 </body>
 </html>
+
 
 
 
