--- a/recipe-minisite/recipe2.html
+++ b/recipe-minisite/recipe2.html
@@ -5,7 +5,7 @@
 	<!-- meta tags and title -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pineapple Upside Down Cake</title>
+	<title>To Die For Blueberry Muffins</title>
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
@@ -59,7 +59,7 @@ main {
 <body>
 	
 <header>
-  <h1>Pineapple Upside Down Cake</h1>
+  <h1>To Die For Blueberry Muffins</h1>
   
 </header>
 	<main>
@@ -99,3 +99,4 @@ main {
 
 </body>
 </html>
+
