--- a/recipe-minisite/recipe2.html
+++ b/recipe-minisite/recipe2.html
@@ -93,10 +93,12 @@ main {
 	</main>
 	<footer>
 		<p>&copy; 2025 Evelyn Z Smith</p>
-		<p>Photo courtesy of Oscar Ivan Esquivel Arteaga via Unsplash</p>
+		<p>Photo by <a href="https://unsplash.com/@nyarlathotep?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Joshua Flores</a> on <a href="https://unsplash.com/photos/brown-cupcakes-on-white-ceramic-plate-5RQffqRkmWQ?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+      </p>
 	</footer>
 	<!-- HTML elements here -->
 
 </body>
 </html>
+
 
