--- a/recipe-minisite/recipe2.html
+++ b/recipe-minisite/recipe2.html
@@ -65,28 +65,41 @@ main {
 	<main>
 		<div>
 	
-		<img src="PUCSmall.jpg" alt="Pineapple upside down cake">
-	<p>Delicious and easy to make, even for inexperienced bakers, the pineapple upside down cake requires only a handful of ingredients and minimal preparation. It also happens to be my mom's favorite!</p>
-		
+		<img src="joshua-flores-5RQffqRkmWQ-unsplash.jpg" alt="Blueberry muffins">
+<p>This blueberry muffin recipe makes eight extra large and yummy breakfast muffins with a sugary-cinnamon crumb topping. I usually double the recipe and fill the muffin cups just to the top for a wonderful, extra-generously-sized, deli-style muffin. Add extra blueberries if you want!</p>		
 		</div>
 			<section>
 			<h2>Ingredients</h2>
+				<h3>Muffins:</h3>
 			<ul>
-				<li>1/4 cup butter</li>
-				<li>1 cup packed brown sugar</li>
-				<li>1 can (20 oz) pineapple slices in juice, drained; save juice</li>
-				<li>1 jar (6 oz) maraschino cherries without stems, drained</li>
-				<li>1 Box Betty Crocker Super Moist Yellow Cake Mix</li>
-				<li>Vegetable oil and eggs (refer to cake mix instructions)</li>
+				<li>1 ½ cups all-purpose flour</li>
+				<li>¾ cup white sugar</li>
+				<li>2 teaspoons baking powder</li>
+				<li>½ teaspoon salt</li>
+				<li>⅓ cup vegetable oil</li>
+				<li>1 large egg</li>
+				<li>⅓ cup milk, or more as needed</li>
+				<li>1 cup fresh blueberries</li>
 			</ul>
+				<h3>Topping:</h3>
+				<ul>
+					<li>½ cup white sugar</li>
+					<li>⅓ cup all-purpose flour</li>
+					<li>¼ cup butter, cubed</li>
+					<li>1 ½ teaspoons ground cinnamon</li>
+				</ul>
 		</section>
 		
 		<section>
 			<h2>Directions</h2>
 			<ol>
-				<li>Heat oven to 350°F (325°F for dark or nonstick pan). In 13x9-inch pan, melt butter in oven. Sprinkle brown sugar evenly over butter. Arrange pineapple slices on brown sugar. Place cherry in center of each pineapple slice, and arrange remaining cherries around slices; press gently into brown sugar.</li>
-				<li>Add enough water to reserved pineapple juice to measure 1 cup. Make cake batter as directed on box, substituting pineapple juice mixture for the water. Pour batter over pineapple and cherries.</li>
-				<li>Bake 42 to 48 minutes (44 to 53 minutes for dark or nonstick pan) or until toothpick inserted in center comes out clean. Immediately run knife around side of pan to loosen cake. Place heatproof serving plate upside down onto pan; turn plate and pan over. Leave pan over cake 5 minutes so brown sugar topping can drizzle over cake; remove pan. Cool 30 minutes. Serve warm or cool. Store covered in refrigerator.</li>
+				<li>Preheat the oven to 400 degrees F (200 degrees C). Grease 8 muffin cups or line with paper liners.</li>
+				<li>To make the muffins: Whisk flour, sugar, baking powder, and salt together in a large bowl.</li>
+				<li>Pour oil into a small liquid measuring cup. Add egg and enough milk to reach the 1-cup mark; stir until combined.</li>
+				<li>Pour into flour mixture and mix just until batter is combined. Fold in blueberries; set batter aside.</li>
+				<li>To make the crumb topping: Combine sugar, flour, butter, and cinnamon in a small bowl. Mix with a fork until crumbly.</li>
+				<li>Spoon batter into the prepared muffin cups, filling right to the top. Sprinkle with crumb topping.</li>
+				<li>Bake in the preheated oven until a toothpick inserted in the center of a muffin comes out clean, 20 to 25 minutes. Enjoy!</li>
 			</ol>
 		</section>
 		
@@ -100,5 +113,6 @@ main {
 
 </body>
 </html>
+
 
 
