--- a/recipe-minisite/recipe2.html
+++ b/recipe-minisite/recipe2.html
@@ -66,7 +66,7 @@ main {
 		<div>
 	
 		<img src="joshua-flores-5RQffqRkmWQ-unsplash.jpg" alt="Blueberry muffins">
-<p>This blueberry muffin recipe makes eight extra large and yummy breakfast muffins with a sugary-cinnamon crumb topping. I usually double the recipe and fill the muffin cups just to the top for a wonderful, extra-generously-sized, deli-style muffin. Add extra blueberries if you want!</p>		
+<p>This blueberry muffin recipe makes eight extra large and yummy breakfast muffins with a sugary-cinnamon crumb topping.</p>		
 		</div>
 			<section>
 			<h2>Ingredients</h2>
@@ -113,6 +113,7 @@ main {
 
 </body>
 </html>
+
 
 
 
