--- a/recipe-minisite/index.html
+++ b/recipe-minisite/index.html
@@ -23,8 +23,12 @@
 </head>
 <body>
   <h1>Welcome to Evelyn's Recipe Collection!</h1>
+	<img src="rai-vidanes-tVy3x2Vu_z4-unsplash.jpg" alt="baking">
+	<p>This is a curated collection of delicious dessert recipes that are easy to make, even for beginners.</p>
+
 
 	<!-- HTML elements here -->
 Photo by <a href="https://unsplash.com/@raividanes?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Rai Vidanes</a> on <a href="https://unsplash.com/photos/cookies-on-black-grill-beside-yellow-ceramic-cup-tVy3x2Vu_z4?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
 </body>
 </html>
+
