--- a/recipe-minisite/index.html
+++ b/recipe-minisite/index.html
@@ -12,6 +12,25 @@
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
 		/* in-file CSS here */
+			    p {
+      line-height: 1.5;
+    }
+	    ul {
+      line-height: 1.5;
+    }
+		    ol {
+      line-height: 1.5;
+    }
+	img {
+  width: auto;
+  height: 250px;
+}
+		@media only screen and (max-width: 480px) {
+      h1,
+      h2,
+			p{
+            text-align: center;
+				image-align: center;
 	</style>
 
 	<!-- external and internal JavaScript -->
@@ -31,4 +50,5 @@
 Photo by <a href="https://unsplash.com/@raividanes?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Rai Vidanes</a> on <a href="https://unsplash.com/photos/cookies-on-black-grill-beside-yellow-ceramic-cup-tVy3x2Vu_z4?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
 </body>
 </html>
+
 
