--- a/recipe-minisite/index.html
+++ b/recipe-minisite/index.html
@@ -14,8 +14,8 @@
 		/* in-file CSS here */
 	
 	img {
-  width: auto;
-  height: 250px;
+  width: 400px;
+  height: auto;
 }
 		@media only screen and (max-width: 480px) {
       h1,
@@ -42,6 +42,7 @@
 Photo by <a href="https://unsplash.com/@raividanes?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Rai Vidanes</a> on <a href="https://unsplash.com/photos/cookies-on-black-grill-beside-yellow-ceramic-cup-tVy3x2Vu_z4?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
 </body>
 </html>
+
 
 
 
