--- a/recipe-minisite/index.html
+++ b/recipe-minisite/index.html
@@ -33,6 +33,38 @@
 
 </head>
 <body>
+	<nav>
+		<a id="navBurger">&#9776;</a>
+
+		<ul>
+			<li><a href="#">My Favorite News Sites</a>
+				<ul>
+					<li><a href="https://arstechnica.com">Ars Technica</a></li>
+					<li><a href="#">Submenu One B</a></li>
+					<li><a href="#">Submenu One C</a></li>
+				</ul>
+			</li>
+
+			<li><a href="#">Menu Item Two</a>
+				<ul>
+					<li><a href="#">Submenu Two A</a></li>
+					<li><a href="#">Submenu Two B</a></li>
+					<li><a href="#">Submenu Two C</a></li>
+					<li><a href="#">Submenu Two D</a></li>
+					<li><a href="#">Submenu Two E</a></li>
+				</ul>
+			</li>
+
+			<li><a href="#">Menu Item Three</a>
+				<ul>
+					<li><a href="#">Submenu Three A</a></li>
+					<li><a href="#">Submenu Three B</a></li>
+				</ul>
+			</li>
+
+		</ul>
+
+	</nav>
   <h1>Welcome to Evelyn's Recipe Collection!</h1>
 	<img src="rai-vidanes-tVy3x2Vu_z4-unsplash.jpg" alt="baking">
 	<p>This is a curated collection of delicious dessert recipes that are easy to make, even for beginners.</p>
@@ -42,6 +74,7 @@
 Photo by <a href="https://unsplash.com/@raividanes?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Rai Vidanes</a> on <a href="https://unsplash.com/photos/cookies-on-black-grill-beside-yellow-ceramic-cup-tVy3x2Vu_z4?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
 </body>
 </html>
+
 
 
 
