--- a/recipe-minisite/recipe2.html
+++ b/recipe-minisite/recipe2.html
@@ -10,15 +10,7 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
-		    p {
-      line-height: 1.5;
-    }
-	    ul {
-      line-height: 1.5;
-    }
-		    ol {
-      line-height: 1.5;
-    }
+	
 	img {
   width: auto;
   height: 250px;
@@ -57,7 +49,38 @@ main {
 
 </head>
 <body>
-	
+	<nav>
+		<a id="navBurger">&#9776;</a>
+
+		<ul>
+			<li><a href="#">My Favorite News Sites</a>
+				<ul>
+					<li><a href="https://arstechnica.com">Ars Technica</a></li>
+					<li><a href="#">Submenu One B</a></li>
+					<li><a href="#">Submenu One C</a></li>
+				</ul>
+			</li>
+
+			<li><a href="#">Menu Item Two</a>
+				<ul>
+					<li><a href="#">Submenu Two A</a></li>
+					<li><a href="#">Submenu Two B</a></li>
+					<li><a href="#">Submenu Two C</a></li>
+					<li><a href="#">Submenu Two D</a></li>
+					<li><a href="#">Submenu Two E</a></li>
+				</ul>
+			</li>
+
+			<li><a href="#">Menu Item Three</a>
+				<ul>
+					<li><a href="#">Submenu Three A</a></li>
+					<li><a href="#">Submenu Three B</a></li>
+				</ul>
+			</li>
+
+		</ul>
+
+	</nav>
 <header>
   <h1>To Die For Blueberry Muffins</h1>
   
@@ -113,6 +136,7 @@ main {
 
 </body>
 </html>
+
 
 
 
