--- a/recipe-minisite/index.html
+++ b/recipe-minisite/index.html
@@ -37,28 +37,23 @@
 		<a id="navBurger">&#9776;</a>
 
 		<ul>
-			<li><a href="#">My Favorite News Sites</a>
+			<li><a href="eeveezsmith.github.io/recipe-minisite/index.html">Home</a>
+			</li>
+
+			<li><a href="#">My Recipes</a>
 				<ul>
-					<li><a href="https://arstechnica.com">Ars Technica</a></li>
-					<li><a href="#">Submenu One B</a></li>
-					<li><a href="#">Submenu One C</a></li>
+					<li><a href="eeveezsmith.github.io/recipe-minisite/recipe1.html">Pineapple Upside Down Cake</a></li>
+					<li><a href="eeveezsmith.github.io/recipe-minisite/recipe2.html">To Die For Blueberry Muffins</a></li>
+					<li><a href="eeveezsmith.github.io/recipe-minisite/recipe3.html">Nestlé Toll House's Original Chocolate Chip Cookies</a></li>
+					
 				</ul>
 			</li>
 
-			<li><a href="#">Menu Item Two</a>
+			<li><a href="#">Favorite Recipe Sites</a>
 				<ul>
-					<li><a href="#">Submenu Two A</a></li>
-					<li><a href="#">Submenu Two B</a></li>
-					<li><a href="#">Submenu Two C</a></li>
-					<li><a href="#">Submenu Two D</a></li>
-					<li><a href="#">Submenu Two E</a></li>
-				</ul>
-			</li>
-
-			<li><a href="#">Menu Item Three</a>
-				<ul>
-					<li><a href="#">Submenu Three A</a></li>
-					<li><a href="#">Submenu Three B</a></li>
+					<li><a href="https://www.allrecipes.com/">All Recipes</a></li>
+					<li><a href="https://www.foodnetwork.com/recipes">Food Network</a></li>
+					<li><a href="https://www.simplyrecipes.com/">Simply Recipes</a></li>
 				</ul>
 			</li>
 
@@ -74,6 +69,7 @@
 Photo by <a href="https://unsplash.com/@raividanes?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Rai Vidanes</a> on <a href="https://unsplash.com/photos/cookies-on-black-grill-beside-yellow-ceramic-cup-tVy3x2Vu_z4?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
 </body>
 </html>
+
 
 
 
