--- a/recipe-minisite/index.html
+++ b/recipe-minisite/index.html
@@ -37,14 +37,14 @@
 		<a id="navBurger">&#9776;</a>
 
 		<ul>
-			<li><a href="eeveezsmith.github.io/recipe-minisite/index.html">Home</a>
+			<li><a href="index.html">Home</a>
 			</li>
 
 			<li><a href="#">My Recipes</a>
 				<ul>
-					<li><a href="https://www.eeveezsmith.github.io/recipe-minisite/recipe1.html">Pineapple Upside Down Cake</a></li>
-					<li><a href="https://www.eeveezsmith.github.io/recipe-minisite/recipe2.html">To Die For Blueberry Muffins</a></li>
-					<li><a href="https://www.eeveezsmith.github.io/recipe-minisite/recipe3.html">Nestlé Toll House's Original Chocolate Chip Cookies</a></li>
+					<li><a href="recipe1.html">Pineapple Upside Down Cake</a></li>
+					<li><a href="recipe2.html">To Die For Blueberry Muffins</a></li>
+					<li><a href="recipe3.html">Nestlé Toll House's Original Chocolate Chip Cookies</a></li>
 					
 				</ul>
 			</li>
@@ -69,6 +69,7 @@
 Photo by <a href="https://unsplash.com/@raividanes?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Rai Vidanes</a> on <a href="https://unsplash.com/photos/cookies-on-black-grill-beside-yellow-ceramic-cup-tVy3x2Vu_z4?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
 </body>
 </html>
+
 
 
 
