--- a/recipe-minisite/recipe1.html
+++ b/recipe-minisite/recipe1.html
@@ -53,28 +53,23 @@ main {
 		<a id="navBurger">&#9776;</a>
 
 		<ul>
-			<li><a href="#">My Favorite News Sites</a>
+			<li><a href="index.html">Home</a>
+			</li>
+
+			<li><a href="#">My Recipes</a>
 				<ul>
-					<li><a href="https://arstechnica.com">Ars Technica</a></li>
-					<li><a href="#">Submenu One B</a></li>
-					<li><a href="#">Submenu One C</a></li>
+					<li><a href="recipe1.html">Pineapple Upside Down Cake</a></li>
+					<li><a href="recipe2.html">To Die For Blueberry Muffins</a></li>
+					<li><a href="recipe3.html">Nestlé Toll House's Original Chocolate Chip Cookies</a></li>
+					
 				</ul>
 			</li>
 
-			<li><a href="#">Menu Item Two</a>
+			<li><a href="#">Favorite Recipe Sites</a>
 				<ul>
-					<li><a href="#">Submenu Two A</a></li>
-					<li><a href="#">Submenu Two B</a></li>
-					<li><a href="#">Submenu Two C</a></li>
-					<li><a href="#">Submenu Two D</a></li>
-					<li><a href="#">Submenu Two E</a></li>
-				</ul>
-			</li>
-
-			<li><a href="#">Menu Item Three</a>
-				<ul>
-					<li><a href="#">Submenu Three A</a></li>
-					<li><a href="#">Submenu Three B</a></li>
+					<li><a href="https://www.allrecipes.com/">All Recipes</a></li>
+					<li><a href="https://www.foodnetwork.com/recipes">Food Network</a></li>
+					<li><a href="https://www.simplyrecipes.com/">Simply Recipes</a></li>
 				</ul>
 			</li>
 
@@ -122,4 +117,5 @@ main {
 
 </body>
 </html>
+
 
