--- a/recipe-minisite/recipe3.html
+++ b/recipe-minisite/recipe3.html
@@ -12,8 +12,8 @@
 	<style>
 	
 	img {
-  width: auto;
-  height: 250px;
+  width: 300px;
+  height: auto;
 }
 main {
   display: flex;
@@ -121,6 +121,7 @@ main {
 
 </body>
 </html>
+
 
 
 
