--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 </li>
 		<li><a href="eeveezsmith.github.io/responsive-recipe/index.html">Tiny Project 6</a>
 </li>
+		<li><a href="eeveezsmith.github.io/recipe-minisite/index.html"></a></li>
 	</ul>
 	<H2>Major Project</H2>
 	<a href="https://www.google.com/">Placeholder Link</a>
