--- a/dark-flower/index.html
+++ b/dark-flower/index.html
@@ -61,7 +61,9 @@ h3 {
 	<p><b>Climate</b></p>
 	<p>Fairly dry open forests and edges; commonly grows along roadsides in the rainshadow of the Olympic Mountains</p>
 	<!-- HTML elements here -->
+	<button id="toggleDarkMode">Dark Mode</button>
 
 </body>
 </html>
+
 
