--- a/dark-flower/index.html
+++ b/dark-flower/index.html
@@ -18,26 +18,17 @@
   width: 500px;
   height: auto; /* Height will adjust proportionally */
 }
-	
-		@media only screen and (max-width: 600px) {
-  body {
+		 @media only screen and (max-width: 480px) {
+      h1,
+      h2, {
+            text-align: center;
+            /* Center text on small screens */
+      }
+			 body {
     background-color: lightblue;
-  }
-}
-		p {
-  text-align: center;
-}
-		h1 {
-  text-align: center;
-}
+      }
+		 }
 
-h2 {
-  text-align: center;
-}
-
-h3 {
-  text-align: center;
-}
 		/* in-file CSS here */
 	</style>
 
@@ -65,5 +56,6 @@ h3 {
 
 </body>
 </html>
+
 
 
