--- a/dark-flower/index.html
+++ b/dark-flower/index.html
@@ -19,11 +19,9 @@
   height: auto; /* Height will adjust proportionally */
 }
 		 @media only screen and (max-width: 480px) {
-      h1,
-      h2, {
-            text-align: center;
-            /* Center text on small screens */
-      }
+     body {
+  text-align: center;
+}
 			 body {
     background-color: lightblue;
       }
@@ -56,6 +54,7 @@
 
 </body>
 </html>
+
 
 
 
