--- a/dark-flower/index.html
+++ b/dark-flower/index.html
@@ -19,9 +19,11 @@
   height: auto; /* Height will adjust proportionally */
 }
 		 @media only screen and (max-width: 480px) {
-     body {
+     div {
   text-align: center;
 }
+		 }
+			 @media only screen and (max-width: 480px) {
 			 body {
     background-color: lightblue;
       }
@@ -39,7 +41,7 @@
 </head>
 <body>
 	<img src="Pacific Rhododendron 2 - Gary Monroe-1.jpeg" alt="Pacific Rhododendron">
-
+<div>
 		<h1>Rhododendron macrophyllum</h1>
 	<h2>Pacific Rhododendron</h2>
 	<h3>Otherwise known as the California Rhododendron</h3>
@@ -51,9 +53,11 @@
 	<p>Fairly dry open forests and edges; commonly grows along roadsides in the rainshadow of the Olympic Mountains</p>
 	<!-- HTML elements here -->
 	<button id="toggleDarkMode">Dark Mode</button>
+</div>
 
 </body>
 </html>
+
 
 
 
