--- a/dark-flower/index.html
+++ b/dark-flower/index.html
@@ -19,7 +19,7 @@
   height: auto; /* Height will adjust proportionally */
 }
 		 @media only screen and (max-width: 480px) {
-     div {
+     .div {
   text-align: center;
 }
 		 }
@@ -57,6 +57,7 @@
 
 </body>
 </html>
+
 
 
 
