--- a/dark-flower/index.html
+++ b/dark-flower/index.html
@@ -18,6 +18,9 @@
   width: 500px;
   height: auto; /* Height will adjust proportionally */
 }
+		p {
+  text-align: left;
+}
 		 @media only screen and (max-width: 480px) {
      p {
   text-align: center;
@@ -57,6 +60,7 @@
 
 </body>
 </html>
+
 
 
 
