--- a/long-story/index.html
+++ b/long-story/index.html
@@ -28,7 +28,8 @@
 <body>
 
 	<!-- HTML elements here -->
-
+By <a rel="nofollow" class="external text" href="https://www.flickr.com/photos/81943113@N00">Kimon Berlin</a> - <a rel="nofollow" class="external text" href="https://www.flickr.com/photos/kimon/1469870071/">IMG_1468</a>, <a href="https://creativecommons.org/licenses/by-sa/2.0" title="Creative Commons Attribution-Share Alike 2.0">CC BY-SA 2.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=11107764">Link</a>
 </body>
 </html>
+
 
