--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<a href="https://github.com/EeveeZSmith/eeveezsmith.github.io">Evelyn's GitHub Repository</a>
 	<H2>Activities</H2>
 	<ul>
-		<li><a href="eeveezsmith.github.io/codelogs/log1.html">Code Log 1</a>
+		<li><a href="/codelogs/log1.html">Code Log 1</a>
 </li>
 		<li><a href="eeveezsmith.github.io/codelogs/log2.html">Code Log 2</a></li>
 		<li><a href="eeveezsmith.github.io/codelogs/log3.html">Code Log 3</a></li>
