--- a/index.html
+++ b/index.html
@@ -28,21 +28,23 @@
 	<ul>
 		<li><a href="/codelogs/log1.html">Code Log 1</a>
 </li>
-		<li><a href="eeveezsmith.github.io/codelogs/log2.html">Code Log 2</a></li>
-		<li><a href="eeveezsmith.github.io/codelogs/log3.html">Code Log 3</a></li>
-		<li><a href="eeveezsmith.github.io/codelogs/log4.html">Code Log 4</a>
+		<li><a href="/codelogs/log2.html">Code Log 2</a></li>
+		<li><a href="/codelogs/log3.html">Code Log 3</a></li>
+		<li><a href="/codelogs/log4.html">Code Log 4</a>
 </li>
-		<li><a href="eeveezsmith.github.io/codelogs/log5.html">Code Log 5</a></li>
+		<li><a href="/codelogs/log5.html">Code Log 5</a></li>
 	</ul>
 	<H2>Tiny Projects</H2>
 	<ul>
-		<li><a href="eeveezsmith.github.io/favorite-recipe/index.html">Tiny Project 2</a></li>
-		<li>Tiny Project 3 <a href="eeveezsmith.github.io/anni-albers/index.html">Version 1</a> <a href="https://eeveezsmith.github.io/anni-albers/index2.html">Version 2</a></li>
-		<li><a href="eeveezsmith.github.io/rhododendron/index.html">Tiny Project 4</a>
+		<li><a href="/favorite-recipe/index.html">Tiny Project 2</a></li>
+		<li>Tiny Project 3 <a href="/anni-albers/index.html">Version 1</a> <a href="/anni-albers/index2.html">Version 2</a></li>
+		<li><a href="/rhododendron/index.html">Tiny Project 4</a>
 </li>
-		<li><a href="eeveezsmith.github.io/responsive-recipe/index.html">Tiny Project 6</a>
+		<li><a href="/responsive-recipe/index.html">Tiny Project 6</a>
 </li>
-		<li><a href="eeveezsmith.github.io/recipe-minisite/index.html"></a></li>
+		<li><a href="/recipe-minisite/index.html">Tiny Project 7</a></li>
+		<li><a href="/dark-flower/index.html">Tiny Project 8</li>
+		<li><a href="/long-story/index.html">Tiny Project 9</li>
 	</ul>
 	<H2>Major Project</H2>
 	<a href="https://www.google.com/">Placeholder Link</a>
