--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 		<li><a href="/responsive-recipe/index.html">Tiny Project 6</a>
 </li>
 		<li><a href="/recipe-minisite/index.html">Tiny Project 7</a></li>
-		<li><a href="/dark-flower/index.html">Tiny Project 8</li>
-		<li><a href="/long-story/index.html">Tiny Project 9</li>
+		<li><a href="/dark-flower/index.html">Tiny Project 8</a></li>
+		<li><a href="/long-story/index.html">Tiny Project 9</a></li>
 	</ul>
 	<H2>Major Project</H2>
 	<a href="https://www.google.com/">Placeholder Link</a>
