--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -6,11 +6,15 @@
 	<!-- meta tags and title -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Page Title</title>
+	<title>Pro Writing Whidbey</title>
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
+			  img {
+      width: 250px; /* Sets a fixed width */
+      height: auto /* Sets a fixed height */
+    }
 		/* in-file CSS here */
 	</style>
 
@@ -22,8 +26,19 @@
 
 </head>
 <body>
+<h1>Welcome to Pro Writing Whidbey!</h1>
+	<img src="DPBridge.jpg" alt="Deception Pass Bridge">
 
+	<h2>Whidbey Island's Premier Professional Writing Services</h2>
+	<h3>Across the island or across the world, we can help with all of your business communications needs.</h3>
+	<p><b>Services We Offer:</b></p>
+	<ul>
+		<li><a href="/writing.html">Writing</a></li>
+		<li><a href="/editing.html">Editing</a></li>
+		<li><a href="/web.html">Website Feedback and Design</a></li>
+	</ul>
 	<!-- HTML elements here -->
 
 </body>
 </html>
+
