--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -12,9 +12,15 @@
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
 			  img {
-      width: 250px; /* Sets a fixed width */
+      width: 750px; /* Sets a fixed width */
       height: auto /* Sets a fixed height */
+display: block;
+  margin-left: auto;
+  margin-right: auto;
     }
+		h1, h2, h3, p {
+  text-align: center;
+}
 		/* in-file CSS here */
 	</style>
 
@@ -31,14 +37,16 @@
 
 	<h2>Whidbey Island's Premier Professional Writing Services</h2>
 	<h3>Across the island or across the world, we can help with all of your business communications needs.</h3>
-	<p><b>Services We Offer:</b></p>
+	<p><b>Services We Offer:</b>
 	<ul>
 		<li><a href="/writing.html">Writing</a></li>
 		<li><a href="/editing.html">Editing</a></li>
 		<li><a href="/web.html">Website Feedback and Design</a></li>
 	</ul>
+</p>
 	<!-- HTML elements here -->
 
 </body>
 </html>
+
 
