--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -47,6 +47,13 @@ display: block;
 	<!-- HTML elements here -->
 
 </body>
+	<footer>
+  <p>&copy; Pro Writing Whidbey<br>
+  916 SE Bayshore Dr<br>
+  Oak Harbor, WA  98277<br>
+  Photo by Sheila Sund</p>
+</footer>
 </html>
+
 
 
