--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -11,14 +11,14 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
-			  img {
-      width: 750px; /* Sets a fixed width */
-      height: auto /* Sets a fixed height */
-display: block;
+			img {
+  display: block;
   margin-left: auto;
   margin-right: auto;
-    }
-		h1, h2, h3, p {
+  width: 750px;
+	height: auto;			
+}
+		h1, h2, h3, p, ul {
   text-align: center;
 }
 		/* in-file CSS here */
@@ -54,6 +54,7 @@ display: block;
   Photo by Sheila Sund</p>
 </footer>
 </html>
+
 
 
 
