--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -28,7 +28,7 @@
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: block;
   font-size: 20px;
   margin: 4px 2px;
   cursor: pointer;
@@ -36,9 +36,7 @@
 	transition-duration: 0.4s;
 }
 .button:hover {box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);}
-.button1 {background-color: #04AA6D;} /* Green */
-.button2 {background-color: #008CBA;} /* Blue */
-.button3 {background-color: #f44336;}
+
 		/* in-file CSS here */
 	</style>
 
@@ -69,6 +67,7 @@
   Photo by Sheila Sund</p>
 </footer>
 </html>
+
 
 
 
