--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -28,7 +28,7 @@
   text-decoration: none;
   display: inline-block;
   font-size: 20px;
-  margin: 4px 2px;
+  margin: auto;
   cursor: pointer;
 	border-radius: 12px	
 	transition-duration: 0.4s;
@@ -78,6 +78,7 @@
   Photo by Sheila Sund</p>
 </footer>
 </html>
+
 
 
 
