--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -11,6 +11,9 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
+		h1, h2, h3, p, {
+  text-align: center;
+}
 			img {
   display: block;
   margin-left: auto;
@@ -28,18 +31,17 @@
   text-decoration: none;
   display: inline-block;
   font-size: 20px;
-  margin: auto;
+  margin: 10px;
   cursor: pointer;
 	border-radius: 12px	
 	transition-duration: 0.4s;
 }
 .button:hover {box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);}
-	h1, h2, h3, p, {
-  text-align: center;
-}
+
 .container {
   display: flex;
 	flex-direction: row;
+	justify-content: center;
 }
 @media (max-width: 600px) {
   .container {
@@ -78,6 +80,7 @@
   Photo by Sheila Sund</p>
 </footer>
 </html>
+
 
 
 
