--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -31,12 +31,11 @@
   text-decoration: none;
   display: inline-block;
   font-size: 20px;
-  margin: 10px;
   cursor: pointer;
-	border-radius: 12px	
 	transition-duration: 0.4s;
 }
 .button:hover {box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);}
+.button {border-radius: 12px;}
 
 .container {
   display: flex;
@@ -80,6 +79,7 @@
   Photo by Sheila Sund</p>
 </footer>
 </html>
+
 
 
 
