--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -11,9 +11,7 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
-		h1, h2, h3, p, {
-  text-align: center;
-}
+
 			img {
   display: block;
   margin-left: auto;
@@ -31,6 +29,7 @@
   text-decoration: none;
   display: inline-block;
   font-size: 20px;
+	margin: 10px
   cursor: pointer;
 	transition-duration: 0.4s;
 }
@@ -46,6 +45,9 @@
   .container {
     flex-direction: column;
   }
+}
+				h1, h2, h3, p, {
+  text-align: center;
 }
 		/* in-file CSS here */
 	</style>
@@ -79,6 +81,7 @@
   Photo by Sheila Sund</p>
 </footer>
 </html>
+
 
 
 
