--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -11,7 +11,9 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
-
+		h1, h2, h3, p, {
+  text-align: center;
+}
 			img {
   display: block;
   margin-left: auto;
@@ -29,12 +31,12 @@
   text-decoration: none;
   display: inline-block;
   font-size: 20px;
-margin: 25px
+  margin: 10px;
   cursor: pointer;
+	border-radius: 12px	
 	transition-duration: 0.4s;
 }
 .button:hover {box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);}
-
 
 .container {
   display: flex;
@@ -45,9 +47,6 @@ margin: 25px
   .container {
     flex-direction: column;
   }
-}
-				h1, h2, h3, p, {
-  text-align: center;
 }
 		/* in-file CSS here */
 	</style>
@@ -81,17 +80,3 @@ margin: 25px
   Photo by Sheila Sund</p>
 </footer>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
