--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -18,7 +18,7 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  max-width: 750px;
+  max-width: 100%;
 	height: auto;			
 }
 
@@ -80,4 +80,5 @@
   Photo by Sheila Sund</p>
 </footer>
 </html>
+
 
