--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
 <h1>Welcome to Pro Writing Whidbey!</h1>
-	<img src="DPBridge.jpg" alt="Deception Pass Bridge">
+	<img src="DPBridge2.jpg" alt="Deception Pass Bridge">
 
 	<h2>Whidbey Island's Premier Professional Writing Services</h2>
 	<h3>Across the island or across the world, we can help with all of your business communications needs:</h3>
@@ -80,5 +80,6 @@
   Photo by Sheila Sund</p>
 </footer>
 </html>
+
 
 
