--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -59,6 +59,30 @@
 
 </head>
 <body>
+	<nav>
+		<a id="navBurger">&#9776;</a>
+
+		<ul>
+			<li><a href="/index.html">Home</a></li>
+
+			<li>Services
+				<ul>
+					<li><a href="/writing.html">Writing</a></li>
+					<li><a href="/editing.html">Editing</a></li>
+					<li><a href="/web.html">Web Design</a></li>
+				</ul>
+			</li>
+
+			<li><a href="/about.html">About Us</a>
+				<ul>
+					<li><a href="/team.html">Meet the Team</a></li>
+				</ul>
+			</li>
+			<li><a href="/contact.html">Contact Us</a></li>
+			<li><a href="/portfolio.html">Portfolio</a></li>
+		</ul>
+
+	</nav>
 <h1>Welcome to Pro Writing Whidbey!</h1>
 	<img src="DPBridge2.jpg" alt="Deception Pass Bridge">
 
@@ -80,6 +104,7 @@
   Photo by <a href="https://commons.wikimedia.org/wiki/File:Deception_Pass_Bridge_(8932832423).jpg">Sheila Sund from Salem, United States</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
 </footer>
 </html>
+
 
 
 
