--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -65,7 +65,7 @@
 		<ul>
 			<li><a href="/index.html">Home</a></li>
 
-			<li>Services
+			<li><a href="/services.html">Services</a>
 				<ul>
 					<li><a href="/writing.html">Writing</a></li>
 					<li><a href="/editing.html">Editing</a></li>
@@ -104,6 +104,7 @@
   Photo by <a href="https://commons.wikimedia.org/wiki/File:Deception_Pass_Bridge_(8932832423).jpg">Sheila Sund from Salem, United States</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
 </footer>
 </html>
+
 
 
 
