--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -23,17 +23,17 @@
 }
 
 		.button {
-  background-color: #04AA6D;
-  border: none;			
+  background-color: #67AFCB;
+  border: #347B98;			
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 20px;
+  font-size: 18px;
   margin: 10px;
+border-radius: 4px	
   cursor: pointer;
-	border-radius: 12px	
 	transition-duration: 0.4s;
 }
 .button:hover {box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);}
@@ -107,6 +107,7 @@
   Photo by <a href="https://commons.wikimedia.org/wiki/File:Deception_Pass_Bridge_(8932832423).jpg">Sheila Sund from Salem, United States</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
 </footer>
 </html>
+
 
 
 
