--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -23,8 +23,8 @@
 }
 
 		.button {
-  background-color: #67AFCB;
-  border: #347B98;			
+  background-color: #347B98;
+  border: none;			
   color: white;
   padding: 15px 32px;
   text-align: center;
@@ -32,7 +32,7 @@
   display: inline-block;
   font-size: 18px;
   margin: 10px;
-border-radius: 4px	
+border-radius: 8px	
   cursor: pointer;
 	transition-duration: 0.4s;
 }
@@ -107,6 +107,7 @@ border-radius: 4px
   Photo by <a href="https://commons.wikimedia.org/wiki/File:Deception_Pass_Bridge_(8932832423).jpg">Sheila Sund from Salem, United States</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
 </footer>
 </html>
+
 
 
 
