--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -25,7 +25,7 @@
 		.button {
   background-color: #347B98;
   border: none;			
-  color: white;
+  color: #E4F1F6;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
@@ -107,6 +107,7 @@ border-radius: 8px
   Photo by <a href="https://commons.wikimedia.org/wiki/File:Deception_Pass_Bridge_(8932832423).jpg">Sheila Sund from Salem, United States</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
 </footer>
 </html>
+
 
 
 
