--- a/majorproject/services.html
+++ b/majorproject/services.html
@@ -12,6 +12,31 @@
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
 		/* in-file CSS here */
+.button {
+  background-color: #347B98;
+  border: none;			
+  color: #E4F1F6;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+  margin: 10px;	
+  cursor: pointer;
+	transition-duration: 0.4s;
+}
+.button:hover {box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);}
+
+.container {
+  display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+@media (max-width: 600px) {
+  .container {
+    flex-direction: column;
+  }
+}
 	</style>
 
 	<!-- external and internal JavaScript -->
@@ -27,3 +52,4 @@
 
 </body>
 </html>
+
