--- a/majorproject/services.html
+++ b/majorproject/services.html
@@ -50,10 +50,35 @@
 
 </head>
 <body>
+	<nav>
+		<a id="navBurger">&#9776;</a>
+
+		<ul>
+			<li><a href="/index.html">Home</a></li>
+
+			<li><a href="/services.html">Services</a>
+				<ul>
+					<li><a href="/writing.html">Writing</a></li>
+					<li><a href="/editing.html">Editing</a></li>
+					<li><a href="/web.html">Web Design</a></li>
+				</ul>
+			</li>
+
+			<li><a href="/about.html">About Us</a>
+				<ul>
+					<li><a href="/team.html">Meet the Team</a></li>
+				</ul>
+			</li>
+			<li><a href="/contact.html">Contact Us</a></li>
+			<li><a href="/portfolio.html">Portfolio</a></li>
+		</ul>
+
+	</nav>
 
 	<!-- HTML elements here -->
 
 </body>
 </html>
+
 
 
