--- a/majorproject/services.html
+++ b/majorproject/services.html
@@ -78,7 +78,13 @@
 	<!-- HTML elements here -->
 
 </body>
+	<footer>
+  <p>&copy; Pro Writing Whidbey<br>
+  916 SE Bayshore Dr<br>
+  Oak Harbor, WA  98277
+</footer>
 </html>
+
 
 
 
