--- a/majorproject/services.html
+++ b/majorproject/services.html
@@ -11,6 +11,9 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
+				h1, h2 {
+  text-align: center;
+}
 		/* in-file CSS here */
 .button {
   background-color: #347B98;
@@ -74,7 +77,7 @@
 		</ul>
 
 	</nav>
-
+	<h1>Our Services</h1>
 	<!-- HTML elements here -->
 
 </body>
@@ -84,6 +87,7 @@
   Oak Harbor, WA  98277
 </footer>
 </html>
+
 
 
 
