--- a/majorproject/services.html
+++ b/majorproject/services.html
@@ -78,6 +78,21 @@
 
 	</nav>
 	<h1>Our Services</h1>
+	
+	<div class="container">
+		<div>
+			<h2>Writing</h2>
+			<ul>
+				<li>Technical or specialized documents, such as instruction manuals or guidebooks</li>
+				<li>Promotional or informational materials: booklets, pamphlets, posters, etc.</li>
+				<li>Email and print marketing campaigns</li>
+				<li>Restaurant menus</li>
+				<li>Presentations</li>
+				<li>And more!</li>
+			</ul>
+			<a href="/writing.html" class="button">More Writing Info</a>
+		</div>
+	</div>
 	<!-- HTML elements here -->
 
 </body>
@@ -87,6 +102,7 @@
   Oak Harbor, WA  98277
 </footer>
 </html>
+
 
 
 
