--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -92,9 +92,9 @@ border-radius: 8px
 	<h2>Whidbey Island's Premier Professional Writing Services</h2>
 	<h3>Across the island or across the world, we can help with all of your business communications needs:</h3>
 	<div class="container">
-	<div><a href="/writing.html" class="button">Writing</a></div>
-	<div><a href="/editing.html" class="button">Editing</a></div>
-	<div><a href="/web.html" class="button">Web Design</a></div>
+	<div><a href="/majorproject/writing.html" class="button">Writing</a></div>
+	<div><a href="/majorproject/editing.html" class="button">Editing</a></div>
+	<div><a href="/majorproject/web.html" class="button">Web Design</a></div>
 	</div>
 	
 	<!-- HTML elements here -->
@@ -107,6 +107,7 @@ border-radius: 8px
   Photo by <a href="https://commons.wikimedia.org/wiki/File:Deception_Pass_Bridge_(8932832423).jpg">Sheila Sund from Salem, United States</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
 </footer>
 </html>
+
 
 
 
