--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -66,23 +66,23 @@ border-radius: 8px
 		<a id="navBurger">&#9776;</a>
 
 		<ul>
-			<li><a href="/index.html">Home</a></li>
+			<li><a href="/majorproject/index.html">Home</a></li>
 
-			<li><a href="/services.html">Services</a>
+			<li><a href="/majorprojectservices.html">Services</a>
 				<ul>
-					<li><a href="/writing.html">Writing</a></li>
-					<li><a href="/editing.html">Editing</a></li>
-					<li><a href="/web.html">Web Design</a></li>
+					<li><a href="/majorproject/writing.html">Writing</a></li>
+					<li><a href="/majorproject/editing.html">Editing</a></li>
+					<li><a href="/majorproject/web.html">Web Design</a></li>
 				</ul>
 			</li>
 
-			<li><a href="/about.html">About Us</a>
+			<li><a href="/majorproject/about.html">About Us</a>
 				<ul>
-					<li><a href="/team.html">Meet the Team</a></li>
+					<li><a href="/majorproject/team.html">Meet the Team</a></li>
 				</ul>
 			</li>
-			<li><a href="/contact.html">Contact Us</a></li>
-			<li><a href="/portfolio.html">Portfolio</a></li>
+			<li><a href="/majorproject/contact.html">Contact Us</a></li>
+			<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
 		</ul>
 
 	</nav>
@@ -107,6 +107,7 @@ border-radius: 8px
   Photo by <a href="https://commons.wikimedia.org/wiki/File:Deception_Pass_Bridge_(8932832423).jpg">Sheila Sund from Salem, United States</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
 </footer>
 </html>
+
 
 
 
