--- a/majorproject/services.html
+++ b/majorproject/services.html
@@ -57,26 +57,27 @@
 		<a id="navBurger">&#9776;</a>
 
 		<ul>
-			<li><a href="/index.html">Home</a></li>
+			<li><a href="/majorproject/index.html">Home</a></li>
 
-			<li><a href="/services.html">Services</a>
+			<li><a href="/majorprojectservices.html">Services</a>
 				<ul>
-					<li><a href="/writing.html">Writing</a></li>
-					<li><a href="/editing.html">Editing</a></li>
-					<li><a href="/web.html">Web Design</a></li>
+					<li><a href="/majorproject/writing.html">Writing</a></li>
+					<li><a href="/majorproject/editing.html">Editing</a></li>
+					<li><a href="/majorproject/web.html">Web Design</a></li>
 				</ul>
 			</li>
 
-			<li><a href="/about.html">About Us</a>
+			<li><a href="/majorproject/about.html">About Us</a>
 				<ul>
-					<li><a href="/team.html">Meet the Team</a></li>
+					<li><a href="/majorproject/team.html">Meet the Team</a></li>
 				</ul>
 			</li>
-			<li><a href="/contact.html">Contact Us</a></li>
-			<li><a href="/portfolio.html">Portfolio</a></li>
+			<li><a href="/majorproject/contact.html">Contact Us</a></li>
+			<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
 		</ul>
 
 	</nav>
+
 	<h1>Our Services</h1>
 	
 	<div class="container">
@@ -90,7 +91,7 @@
 				<li>Presentations</li>
 				<li>And more!</li>
 			</ul>
-			<a href="/writing.html" class="button">More Writing Info</a>
+			<a href="/majorproject/writing.html" class="button">More Writing Info</a>
 		</div>
 	</div>
 	<!-- HTML elements here -->
@@ -102,6 +103,7 @@
   Oak Harbor, WA  98277
 </footer>
 </html>
+
 
 
 
