--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -68,7 +68,7 @@ border-radius: 8px
 		<ul>
 			<li><a href="/majorproject/index.html">Home</a></li>
 
-			<li><a href="/majorprojectservices.html">Services</a>
+			<li><a href="/majorproject/services.html">Services</a>
 				<ul>
 					<li><a href="/majorproject/writing.html">Writing</a></li>
 					<li><a href="/majorproject/editing.html">Editing</a></li>
@@ -107,6 +107,7 @@ border-radius: 8px
   Photo by <a href="https://commons.wikimedia.org/wiki/File:Deception_Pass_Bridge_(8932832423).jpg">Sheila Sund from Salem, United States</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
 </footer>
 </html>
+
 
 
 
