--- a/majorproject/services.html
+++ b/majorproject/services.html
@@ -6,7 +6,7 @@
 	<!-- meta tags and title -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Page Title</title>
+	<title>Services</title>
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
@@ -59,7 +59,7 @@
 		<ul>
 			<li><a href="/majorproject/index.html">Home</a></li>
 
-			<li><a href="/majorprojectservices.html">Services</a>
+			<li><a href="/majorproject/services.html">Services</a>
 				<ul>
 					<li><a href="/majorproject/writing.html">Writing</a></li>
 					<li><a href="/majorproject/editing.html">Editing</a></li>
@@ -103,6 +103,7 @@
   Oak Harbor, WA  98277
 </footer>
 </html>
+
 
 
 
