--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -101,12 +101,15 @@ border-radius: 8px
 
 </body>
 	<footer>
-  <p>&copy; Pro Writing Whidbey<br>
+  <p {
+  text-align: center;
+}>&copy; Pro Writing Whidbey<br>
   916 SE Bayshore Dr<br>
   Oak Harbor, WA  98277<br>
   Photo by <a href="https://commons.wikimedia.org/wiki/File:Deception_Pass_Bridge_(8932832423).jpg">Sheila Sund from Salem, United States</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
 </footer>
 </html>
+
 
 
 
