--- a/majorproject/services.html
+++ b/majorproject/services.html
@@ -98,11 +98,14 @@
 
 </body>
 	<footer>
-  <p>&copy; Pro Writing Whidbey<br>
+  <p {
+  text-align: center;
+}>&copy; Pro Writing Whidbey<br>
   916 SE Bayshore Dr<br>
   Oak Harbor, WA  98277
 </footer>
 </html>
+
 
 
 
